# Movie-Database-Manager

./: CMakeLists.txt  main.cpp
Business/: MoviesLocalDBService.cpp  MoviesLocalDBService.h
Domain/: Movie.cpp  Movie.h
Errors/: CustomExceptions.cpp  CustomExceptions.h
Persistency/FILERepo/CSVRepo/: CsvMoviesRepository.cpp  CsvMoviesRepository.h
Persistency/FILERepo/HTMLRepo/: HtmlMoviesRepository.cpp  HtmlMoviesRepository.h
Persistency/RepositoryLibrary/: FileTRepository.h  InMemoryTRepository.h  TRepository.h
Presentation/: ConsoleUI.cpp  ConsoleUI.h  GUI.cpp  GUI.h
Validation/: MovieValidator.cpp  MovieValidator.h
res/files/: movies.csv  movies.html  watchlist.csv  watchlist.html
